--- a/_posts/2017-04-19-sony-a9.md
+++ b/_posts/2017-04-19-sony-a9.md
@@ -7,7 +7,7 @@ categories:
   - Hardware
 ---
 
-![Sony Alpha A9](sony-a9.jpg)
+![Sony Alpha A9](http://www.geekphotographer.com/wp-content/uploads/2017/04/19/rsz_sony-a9.jpg)
 
 Sony have just announced their new mirrorless flagship: the Alpha A9, and man, this is impressive!
 
